test_regress/t/t_clk_first_bad.out
%Warning-DEPRECATED: t/t_clk_first_deprecated.v:12:14: sc_clock is deprecated and will be removed
   input clk /*verilator sc_clock*/ ;
             ^~~~~~~~~~~~~~~~~~~~~~
                     ... Use "/* verilator lint_off DEPRECATED */" and lint_on around source to disable this message.
%Error: Exiting due to
